@@ -51,7 +51,6 @@
  */
 package com.sun.jersey.api.model;
 
-import com.sun.jersey.api.model.AbstractResourceMethod;
 import junit.framework.TestCase;
 
 /**
@@ -80,7 +79,7 @@ public class AbstractResourceMethodTest extends TestCase {
      */
     public void testGetHttpMethod() throws NoSuchMethodException {
         AbstractResourceMethod arm = new AbstractResourceMethod(
-                null, TestResource.class.getMethod("getMethod"), "PUT", null);
+                null, TestResource.class.getMethod("getMethod"), null, null, "PUT", null);
         assertEquals("PUT", arm.getHttpMethod());
     }
 }
