@@ -1,0 +1,139 @@
+/*
+ *
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ * 
+ * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * 
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License. You can obtain
+ * a copy of the License at https://jersey.dev.java.net/CDDL+GPL.html
+ * or jersey/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ * 
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at jersey/legal/LICENSE.txt.
+ * Sun designates this particular file as subject to the "Classpath" exception
+ * as provided by Sun in the GPL Version 2 section of the License file that
+ * accompanied this code.  If applicable, add the following below the License
+ * Header, with the fields enclosed by brackets [] replaced by your own
+ * identifying information: "Portions Copyrighted [year]
+ * [name of copyright owner]"
+ * 
+ * Contributor(s):
+ * 
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+
+package com.sun.jersey.impl.resource;
+
+import com.sun.jersey.api.client.GenericType;
+import com.sun.jersey.api.client.WebResource;
+import com.sun.jersey.impl.AbstractResourceTester;
+import com.sun.jersey.impl.client.JAXBBean;
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Collection;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.GenericEntity;
+
+/**
+ *
+ * @author Paul.Sandoz@Sun.Com
+ */
+public class GenericTypesTest extends AbstractResourceTester {
+    
+    public GenericTypesTest(String testName) {
+        super(testName);
+    }
+
+    public static abstract class AResource<T, V> {
+        @QueryParam("v") V fieldV;
+
+        V methodV;
+
+        @QueryParam("v")
+        public void set(V methodV) {
+            this.methodV = methodV;
+        }
+
+        @GET
+        public String get(@QueryParam("v") V getV) {
+            return getV.toString() + fieldV.toString() + methodV.toString();
+        }
+        
+        @POST
+        public T post(T t) {
+            return t;
+        }
+
+        @Path("sub")
+        @POST
+        public T postSub(T t) {
+            return t;
+        }
+    }
+
+    @Path("/")
+    public static class StringResource extends AResource<String, String> {
+    }
+
+    public void testStringQuery() throws IOException {
+        initiateWebApplication(StringResource.class);
+        WebResource r = resource("/").queryParam("v", "foo");
+
+        String s = r.get(String.class);
+        assertEquals("foofoofoo", s);
+    }
+
+    @Path("/")
+    public static class BigDecimalResource extends AResource<String, BigDecimal> {
+    }
+
+    public void testBigDecimalQuery() throws IOException {
+        initiateWebApplication(BigDecimalResource.class);
+        WebResource r = resource("/").queryParam("v", "3.14");
+
+        String s = r.get(String.class);
+        assertEquals("3.143.143.14", s);
+    }
+
+    @Path("/")
+    @Produces("application/xml")
+    public static class CollectionJAXBResource extends AResource<Collection<JAXBBean>, String> {
+    }
+
+    public void testCollectionJAXB() throws IOException {
+        initiateWebApplication(CollectionJAXBResource.class);
+        WebResource r = resource("/").queryParam("v", "3.14");
+
+        Collection<JAXBBean> c = new ArrayList<JAXBBean>();
+        c.add(new JAXBBean("one"));
+        c.add(new JAXBBean("two"));
+        c.add(new JAXBBean("three"));
+
+        c = r.post(new GenericType<Collection<JAXBBean>>(){},
+                new GenericEntity<Collection<JAXBBean>>(c){});
+        assertEquals(3, c.size());
+
+        c = r.path("sub").post(new GenericType<Collection<JAXBBean>>(){},
+                new GenericEntity<Collection<JAXBBean>>(c){});
+        assertEquals(3, c.size());
+    }
+
+}
